--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <!-- FCC test suite -->
+        <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     </body>
 </html>
